# autosarfactory

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.py
.github/workflows/: autosarfactory_testing.yml  autosarmodeller_testing.yml
Examples/: create_autosar_basic_communication.py
autosar_releases/autosar448/: XmlElementDirtyTracker.py
autosar_releases/autosar452/: __init__.py
autosarfactory/: AutosarUI_pref.ini  __init__.py  autosar_ui.py  datatype_utils.py
autosarfactory/ui/: AutosarUI_pref.ini  __init__.py  autosar_ui.py  graph_gen.py
autosarfactory/ui/templates/: css.tpl  javascripts.tpl
autosarfactory/utils/: XmlElementDirtyTracker.py  datatype_utils.py
autosarmodeller/: __init__.py  autosar_ui.py
mcp_server/: README.md  pyproject.toml
mcp_server/autosarfactory_mcp/: __init__.py  server.py
mcp_server/autosarfactory_mcp/ar_map/: autosar_element_map.md
mcp_server/autosarfactory_mcp/db/: af_api_reference.json  ecuc_param_def.json
mcp_server/kb_builder/: build_knowledge_base.py
mcp_server/paramDefDbBuilder/: ecuc_module_def_to_json.py
tests/: test_autosarmodel.py
tests/resources/: components.arxml  datatypes.arxml  diag_sw_mapping.arxml  interfaces.arxml  split1.arxml  split2.arxml
